<resources>
    <string name="app_name">My Reminders</string>
    <string name="action_home">Home</string>
    <string name="action_add_reminder">Add Reminder</string>
    <string name="title_activity_create_reminder">Create My Reminder</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="view_high_priority">View High Priority</string>
    <string name="view_medium_priority">View Medium Priority</string>
    <string name="title_activity_view_high_priority">View High Priority</string>
    <string name="view_low_priority">View Low Priority</string>
    <string-array name="priorities">
        <item></item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="title_activity_view_medium_priority">View Medium Priority</string>
    <string name="title_activity_view_low_priority">View Low Priority</string>
    <string name="datetextview">dateTextView</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="title_activity_view_reminder">View Reminder</string>
</resources>