<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myreminders.ViewReminder">
    <item
        android:id="@+id/delete_item"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_reminder"
        app:showAsAction="always"
        android:onClick="deleteReminder"/>
    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_reminder"
        android:orderInCategory="2"
        android:title="@string/action_add_reminder"
        app:showAsAction="never" />
</menu>